<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background_image"
    tools:context="com.example.rndroid.minorproject2_database.Home_Fragment">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:layout_weight="2"
        android:gravity="center|bottom"
        android:paddingBottom="@dimen/fifty_dp"
        android:textSize="@dimen/eitheenSP"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="@dimen/zeroDP"
        android:text="@string/welcome_to_dravidian_university" />
    <LinearLayout
        android:layout_weight="0.7"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/zeroDP">
        <ImageView
            android:layout_weight="1.2"
            android:layout_gravity="center"
            android:src="@drawable/add_user"
            android:id="@+id/imageview_NewUser_homefragment"
            android:layout_width="@dimen/zeroDP"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_gravity="center"
            android:layout_weight="2"
            android:textSize="@dimen/eitheenSP"
            android:textColor="@color/black"
            android:layout_width="@dimen/zeroDP"
            android:layout_height="wrap_content"
            android:text="@string/new_user" />
        <Button
            android:background="#a1a1a1"
            android:id="@+id/button_register_homefragment"
            android:textSize="@dimen/eitheenSP"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:text="@string/register"
            android:layout_width="@dimen/hundred_dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/five_dp"/>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/twenty_dp" />
    <LinearLayout
        android:layout_weight="0.6"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/zeroDP">
        <ImageView
            android:layout_weight="1.2"
            android:src="@drawable/register_user"
            android:id="@+id/imageview_login_homefragment"
            android:layout_width="@dimen/zeroDP"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_gravity="center|top"
            android:layout_weight="2"
            android:textSize="@dimen/eitheenSP"
            android:textColor="@color/black"
            android:layout_width="@dimen/zeroDP"
            android:layout_height="wrap_content"
            android:text="@string/have_an_account" />
        <Button
            android:background="@color/button"
            android:textAllCaps="false"
            android:id="@+id/button_login_homefragment"
            android:textSize="@dimen/eitheenSP"
            android:textColor="@color/black"
            android:text="@string/login"
            android:layout_width="@dimen/hundred_dp"
            android:layout_height="match_parent" />
    </LinearLayout>
    <TextView
        android:layout_weight="2.5"
        android:layout_width="match_parent"
        android:layout_height="@dimen/zeroDP" />
</LinearLayout>
