<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:background="@drawable/background_image"
    tools:context="com.example.rndroid.minorproject2_database.EmailStudentFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/fourtyDP"
        android:layout_marginTop="@dimen/fifteenDP">
        <TextView
            android:layout_width="@dimen/zeroDP"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:text="@string/to"
            android:gravity="start|center"
            android:textSize="@dimen/eitheenSP"/>
        <EditText
            android:layout_width="@dimen/zeroDP"
            android:layout_height="match_parent"
            android:layout_weight="3.5"
            android:paddingLeft="@dimen/fourDP"
            android:background="@drawable/edittext_shape_row"
            android:textColor="@color/black"
            android:inputType="textEmailAddress"
            android:textSize="@dimen/eitheenSP"
            android:id="@+id/compose_email_to"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/fourtyDP"
        android:layout_marginTop="@dimen/fifteenDP">
        <TextView
            android:layout_width="@dimen/zeroDP"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:text="@string/subject"
            android:gravity="start|center"
            android:textSize="@dimen/eitheenSP"/>
        <EditText
            android:layout_width="@dimen/zeroDP"
            android:layout_height="match_parent"
            android:layout_weight="3.5"
            android:background="@drawable/edittext_shape_row"
            android:textColor="@color/black"
            android:inputType="textEmailSubject"
            android:paddingLeft="@dimen/fourDP"
            android:textSize="@dimen/eitheenSP"
            android:id="@+id/compose_email_subject"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/twohudDP"
        android:layout_marginTop="@dimen/fifteenDP">
        <TextView
            android:layout_width="@dimen/zeroDP"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:text="@string/compose"
            android:gravity="start|center|top"
            android:textSize="@dimen/eitheenSP"/>
        <EditText
            android:layout_width="@dimen/zeroDP"
            android:layout_height="match_parent"
            android:layout_weight="3.5"
            android:inputType="textMultiLine"
            android:background="@drawable/edittext_shape_row"
            android:textColor="@color/black"
            android:paddingLeft="@dimen/fourDP"
            android:textSize="@dimen/eitheenSP"
            android:id="@+id/compose_email_text"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/fourtyDP"
        android:layout_marginTop="@dimen/twelveDP">
        <TextView
            android:layout_width="@dimen/zeroDP"
            android:layout_weight="1.16"
            android:layout_height="match_parent" />
        <Button
            android:layout_width="@dimen/zeroDP"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:textSize="@dimen/sixteenSP"
            android:textColor="@color/black"
            android:textAllCaps="false"
            android:gravity="center"
            android:background="@color/button"
            android:text="@string/send"
            android:id="@+id/button_send"/>
        <TextView
            android:layout_width="@dimen/zeroDP"
            android:layout_weight="1"
            android:layout_height="match_parent" />
        <Button
            android:layout_width="@dimen/zeroDP"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_height="match_parent"
            android:textSize="@dimen/sixteenSP"
            android:textColor="@color/black"
            android:textAllCaps="false"
            android:background="@color/button"
            android:text="@string/close"
            android:id="@+id/button_close"/>
        <TextView
            android:layout_width="@dimen/zeroDP"
            android:layout_weight="1"
            android:layout_height="match_parent" />
    </LinearLayout>

</LinearLayout>
